Leaderboard Completed + Profile Submissions & Graph Added

--- a/src/main/webapp/ui-headings.html
+++ b/src/main/webapp/ui-headings.html
@@ -14,3 +14,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link href="public/favicon.ico" rel="icon" type="image/ico" />
+
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
